Flare v1.13 (WIP)

Engine fixes:

* Fix enemies not being able to target NPC followers
* Fix loot and sound effects being cleared in StatBlock files with multiple sections
* Fix potential crash when removing summons that would be out-of-bounds on the next map.
* Fix bug where a damage type with no name could be removed if another damage type was defined after it.

Game updates:

* New formula for the 'Shield' power. Instead of Mental Damage, it is now based off a combination of player level, Mental stat, and Defense stat. This should increase its usefulness on mixed builds.
* Added 'Super' and 'Ultra' variants of Health and Mana potions. They can be obtained through the Alchemy system.
* Fixed Alchemist's Skirt so that it works with all potions.



Flare v1.12 (https://flarerpg.org/2021/08/02/flare-1-12/)

Engine features:

* NPC interactions are now canceled when the player is attacked. 'combat_aborts_npc_interact' has been added to engine/misc.txt to control this setting.
* Added 'bar_fill_offset' and 'bar_fill_size' to MenuStatBar and MenuEnemy properties.
* Added support for fading out combat text. See the 'fade_duration' property in engine/combat.txt.
* Added 'save_oncutscene' property to engine/misc.txt. Saving before a cutscene was previously controlled with 'save_onload', which caused issues with cutscenes when set to false.
* Added 'save_anywhere' property to engine/misc.txt. This allows for saving via the pause menu. (m7600)
* Added display of enemies, allies, NPCs, and intermap teleport events to the minimap.
* Added support for defining the colors of tiles and entities on the minimap.
* Added 'show_on_minimap' event component. Currently, this only applies to intermap teleport events.
* Added 'show_on_minimap' property to NPCs.
* Properties that take an alignment can now be aligned to the menu frame.
* Support multiple images in animation definitions. (bloodhero)